# plutus-tx-test

./: .gitignore  README.adoc  cabal.project  plutus-tx-template.cabal
app/: GenAuctionValidatorBlueprint.hs  GenMintingPolicyBlueprint.hs  GenTopHash.hs  GenValidatorBlueprint.hs
off-chain/: plutus-client-validator.json
src/: AuctionValidator.hs  SkyContracts.hs
test/: README.adoc  README.md  claim-bounty.mjs  mint-nft.mjs  offer-bounty.mjs  post-setup.sh  pre-setup.sh  send-lovelace.mjs  test-1.sh  test-2.sh  update-bridge.mjs  util.mjs  verify-bounty-claimed.mjs  verify-bounty-offered.mjs
test/var/: adm2.addr  adm2.pkh  adm2.skey  adm3.addr  adm3.pkh  adm3.skey  admin.addr  admin.pkh  admin.skey  blockfrost.api-key  cla2.addr  cla2.pkh  cla2.skey  cla3.addr  cla3.pkh  cla3.skey  claimant.addr  claimant.pkh  claimant.skey  off2.addr  off2.pkh  off2.skey  off3.addr  off3.pkh  off3.skey  offerer.addr  offerer.pkh  offerer.skey  print-something.mjs  sky-bounty-validator.addr  sky-bounty-validator.json  sky-bridge-validator.addr  sky-bridge-validator.hash  sky-bridge-validator.json  sky-minting-policy.hash  sky-minting-policy.json  timestamp
