cabal-version:   3.0
name:            plutus-tx-template
version:         0.1.0.0
license:
build-type:      Simple
extra-doc-files: README.md

common options
  ghc-options:
  default-language: Haskell2010

library scripts
  import:         options
  hs-source-dirs: src
  exposed-modules:
    SkyContracts
    SkyMintingPolicy

  build-depends:
    , base
    , containers
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , cardano-node-emulator

  if !(impl(ghcjs) || os(ghcjs))
    build-depends: plutus-tx-plugin
